@@ -253,6 +253,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5806) {{plural:}} support instead of "twin" MediaWiki messages
 * (bug 5931) Update for Polish language (pl)
 * Ignore the user and user talk namespaces on Special:Wantedpages
+* Introduce NUMBEROFPAGES magic word
+* (bug 5833) Introduce CURRENTVERSION magic word
 
 == Compatibility ==
 
